file(GLOB ppsat_SRC "*.cpp")
set(CMAKE_CXX_FLAGS "-march=native -maes -mrdseed -O3")
add_library(Ppsat ${ppsat_SRC})
add_executable(ppsat ppsat.cpp)
add_executable(ppsat_2 ppsat_2.cpp)
target_link_libraries(ppsat emp-tool gmp ssl crypto Ppsat)
target_link_libraries(ppsat_2 emp-tool gmp ssl crypto Ppsat)
